Fix: override bootstrap to wrap long pre lines.

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -311,7 +311,7 @@ body.homepage{
 
 code {
   padding: 2px;
-  white-space: pre-wrap;
+  white-space: pre-wrap !important;
 }
 
 /***** Widgets ****************************************************************/
